--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -11,7 +11,7 @@
   justify-content: space-between;
   align-items: flex-start;
 }
-.content-ticket {
+.content_ticket {
   width: 66%;
   padding-left: 20px;
 }
