--- a/src/components/Filters/Filter.module.scss
+++ b/src/components/Filters/Filter.module.scss
@@ -4,7 +4,7 @@
 
   border-radius: 5px;
   box-shadow: 2px 2px 5px 3px rgba(0, 0, 0, 0.1);
-  &-header {
+  &_header {
     text-align: center;
     color: #4a4a4a;
     font-size: 12px;
@@ -15,7 +15,7 @@
     padding-top: 20px;
     padding-bottom: 5px;
   }
-  &-form {
+  &_form {
     display: flex;
     flex-direction: column;
     color: #4a4a4a;
@@ -23,32 +23,32 @@
     font-weight: 400;
     line-height: 20px;
   }
-  &-checkbox {
+  &_checkbox {
     margin-top: 15px;
     margin-left: 20px;
   }
 }
-.custom-checkbox {
+.custom_checkbox {
   position: absolute;
   z-index: -1;
   opacity: 0;
 }
-.custom-checkbox + label {
+.custom_checkbox + label {
   display: inline-flex;
   align-items: center;
   user-select: none;
 }
-.custom-checkbox + label::before {
-  content: "";
+.custom_checkbox + label::before {
+  content: '';
   display: inline-block;
   width: 20px;
   height: 20px;
   border-radius: 2px;
   margin-right: 10px;
   background-repeat: no-repeat;
-  background-image: url("../../../public/img/Checkbox.svg");
+  background-image: url('../../assets/Checkbox.svg');
 }
-.custom-checkbox:checked + label::before {
-  background-image: url("../../../public/img/CheckboxActive.svg");
+.custom_checkbox:checked + label::before {
+  background-image: url('../../assets/CheckboxActive.svg');
   border: none;
 }
