--- a/src/components/Ticket/Ticket.module.scss
+++ b/src/components/Ticket/Ticket.module.scss
@@ -9,28 +9,28 @@
     width: 110px;
     height: 36px;
   }
-  &-header {
+  &_header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px 20px;
   }
-  &-header_price {
+  &_header_price {
     color: #2196f3;
     font-size: 24px;
     font-style: normal;
     font-weight: 600;
     line-height: 24px;
   }
-  &-header_logo {
+  &_header_logo {
     width: 110px;
     height: 36px;
   }
 }
 
-.ticket-info {
+.ticket_info {
   display: flex;
-  &-airports {
+  &_airports {
     width: 140px;
     display: flex;
     flex-direction: column;
@@ -53,6 +53,6 @@
     }
   }
 }
-.ticket-info--marg {
+.ticket_info__marg {
   margin-top: 10px;
 }
